[project]
name = "pinterest-export"
version = "0.1.0"
description = "Scrape Pinterest boards, AI-analyze pins, generate HTML galleries"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "httpx",
    "pillow",
    "jinja2",
    "click",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
pinterest-export = "pinterest_export.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
